osd/PrimaryLogPG: get attribute for ec return wrong value for non-exist object

In case of copy object when the target copy is not exist with erasure code pool
getattr_maybe_cache will return ENODATA that will cause ref_count to wildcard tag
that can affect pglog to grow quickly with refcounts for each copy

Fixes: https://tracker.ceph.com/issues/56707
Signed-off-by: Nitzan Mordechai <nmordec@redhat.com>
(cherry picked from commit f060683a2d29fa4c7f20c6f5e20cae9ac23d4481)